# Figma_works

Automotive_Infotainment_V2/: .gitignore  CMakeLists.txt  Main.qml  main.cpp  screensaver.cpp  screensaver.h
